<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorPrimaryTernary"
    tools:context=".ui.detail.DetailItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/colorPrimary"
        android:background="@color/colorPrimarySecondary"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/sv_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/sv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_cover"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="center"
                tools:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:alpha="0.5"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="@id/img_cover"
                app:layout_constraintStart_toStartOf="@id/img_cover"
                app:layout_constraintTop_toTopOf="@id/img_cover"
                tools:ignore="ContentDescription"/>

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginTop="180dp"
                android:scaleType="fitXY"
                android:transitionName="posterTransition"
                tools:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.129"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border_red_24dp"
                app:maxImageSize="30dp"
                android:scaleType="centerInside"
                app:elevation="4dp"
                app:borderWidth="0dp"
                android:backgroundTint="@color/colorPrimaryTernary"
                app:layout_constraintStart_toEndOf="@id/img_photo"
                app:layout_constraintTop_toBottomOf="@id/img_cover"
                app:layout_constraintBottom_toBottomOf="@id/img_cover"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="26dp"
                tools:text="@string/name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:transitionName="nameTransition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/img_photo"
                app:layout_constraintTop_toBottomOf="@+id/img_photo" />

            <RatingBar
                android:id="@+id/rb_star"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:theme="@style/GoldenStarRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:isIndicator="true"
                android:transitionName="ratingBarTransition"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/genres_label"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/rb_star" />

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="26dp"
                tools:text="@string/genres"
                app:layout_constraintBottom_toBottomOf="@+id/genre_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/genre_label"
                app:layout_constraintTop_toTopOf="@+id/genre_label"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/year"
                app:layout_constraintStart_toStartOf="@+id/genre_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/year"
                app:layout_constraintBottom_toBottomOf="@+id/year_label"
                app:layout_constraintStart_toStartOf="@+id/tv_genres"
                app:layout_constraintTop_toTopOf="@+id/year_label" />

            <TextView
                android:id="@+id/lang_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="@+id/year_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_year" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/language"
                app:layout_constraintBottom_toBottomOf="@+id/lang_label"
                app:layout_constraintStart_toStartOf="@+id/tv_year"
                app:layout_constraintTop_toTopOf="@+id/lang_label" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="26dp"
                tools:text="@string/lorem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lang_label"
                app:layout_constraintTop_toBottomOf="@+id/lang_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>