<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_24dp"
        android:title="@string/clear"
        app:showAsAction="always"/>
</menu>